cattle-1.0 (1.2.2-2) unstable; urgency=low

  * Changes to package relationships
    - Downgrade pkg-config from Depends: to Recommends: for -dev

  * debhelper
    - Enable gir addon

  * Security
    - Use https:// for upstream URLs

  * Other
    - Update Standards-Version to 4.0.0
      - Use Format: https://... in Debian copyright file

 -- Andrea Bolognani <eof@kiyuko.org>  Wed, 17 Jan 2018 23:43:34 +0100

cattle-1.0 (1.2.2-1) unstable; urgency=low

  * New upstream release

  * Fix building twice in a row

  * Multi-Arch
    - Mark libcattle-1.0-dev as Multi-Arch: same
    - Mark libcattle-1.0-doc as Multi-Arch: foreign

  * Other
    - Drop Build-Depends on dh-exec
    - Introduce safeguards against unnoticed SONAME bumps

 -- Andrea Bolognani <eof@kiyuko.org>  Sun, 15 Jan 2017 16:17:06 +0100

cattle-1.0 (1.2.1-1) unstable; urgency=low

  * New upstream release

  * Updated patches
    - D01-tweak-build-system.diff
      - Don't skip examples during build

  * debhelper
    - Switch to compat level 10
      - Parallel builds are now supported

  * Security
    - Enable +bindnow hardening option
    - Use HTTPS wherever possible

  * Other
    - Update Standards-Version to 3.9.8
      - No changes needed

 -- Andrea Bolognani <eof@kiyuko.org>  Sun, 30 Oct 2016 09:46:49 +0100

cattle-1.0 (1.2.0-1) unstable; urgency=low

  * New upstream release.
  * Remove unneeded versioned Depends.
    - Closes: #734478 (please drop versioned Depends on pkg-config)
  * Bump Standards-Version to 3.9.6.
  * Upload to unstable.

 -- Andrea Bolognani <eof@kiyuko.org>  Wed, 22 Oct 2014 23:50:21 +0200

cattle-1.0 (1.0.1-1) experimental; urgency=low

  * Initial release. (Closes: #617304)
  * D01-tweak-build-system.diff:
    - avoid building example programs to speed up compilation.

 -- Andrea Bolognani <eof@kiyuko.org>  Sat, 11 Aug 2012 01:52:52 +0200