@@ -1,1 +1,0 @@
-usr/share/gtk-doc/html/cattle-1.0/*
